logs/neg/t963b-neg.log
t963b.scala:25: error: type mismatch;
 found   : B.type
 required: AnyRef
  B.f(B)
      ^
one error found
